--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Ethereum-Nodejs-RESTful-API",
   "version": "1.0.0",
-  "description": "Ethereum ops via RESTful API with Node.js",
+  "description": "Ethereum RESTful API operations in Node.js",
   "main": "dist",
   "scripts": {
     "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-0\"",
